# midhook

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
cli/: lark_tool.py
deploy/: Dockerfile  docker-compose.yaml
devops/: Dockerfile  docker-compose.yaml
midhook/: cli.py  config.py  main.py
midhook/app/: app.py
midhook/app/route/: gitlab.py  gitlab_lark.py  lark.py  model.py
midhook/bridge/: command.py  gitlab_lark.py  gl_bot.py  notification.py  storage.py
midhook/webhook/gitlab/: receiver.py  schema.py
midhook/webhook/lark/: receiver.py  schema.py  security.py  sender.py
midhook/webhooks/: feishu.py
midhook/webhooks/gitlab/: receiver.py
midhook/webhooks/lark/: feishu.py  receiver.py  security.py  sender.py
