[tool.poetry]
name = "midhook"
version = "0.1.0"
description = ""
authors = ["kagami <kagami@somewhere>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.94.1"
python-dotenv = "^1.0.0"
httpx = "^0.23.3"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
loguru = "^0.6.0"
lmdb = "^1.4.0"
gunicorn = "^20.1.0"
pycryptodome = "^3.17"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
ruff = "^0.0.257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
